Update new color theme

--- a/app/less/config.less
+++ b/app/less/config.less
@@ -12,16 +12,18 @@
 @FontStylePrimary: sans-serif;
 @font_family_topic: 'maledpan';
 
-// http://www.color-hex.com/color/21ce99
-@primary_color: #236CBA; // Active Color
+// http://www.color-hex.com/color/0e2b47
+@primary_color: #0e2b47; // Active Color
 @primary_color_dark: #3581C2;
 @primary_color_light: #E3F2FD;
 @bg_color: #FFFFFF;
-@text_color_normal: #37474F;
-@text_color_light: #B0BEC5;
-@text_color_dark: #263238;
-@border_color: #ECEFF1;
-@border_color_hover: #B0BEC5;
+
+@text_color_normal: #EEEEEE;
+@text_color_light: #FFFFFF;
+@text_color_dark: #CCCCCC;
+
+@border_color: #3e556b;
+@border_color_hover: #a7c4e0;
 @green_color: #00B900;
 @red_color: #FF1744;
 @red_color_light: #FFCDD2;
@@ -37,7 +39,7 @@ html {
 // }
 
 body {
-    background: @bg_color;
+    background: @primary_color;
     font-family: @font_family_topic;
     overflow-x: hidden;
 }
