--- a/app/css/style.css
+++ b/app/css/style.css
@@ -136,7 +136,7 @@ html {
   touch-action: manipulation;
 }
 body {
-  background: #ffffff;
+  background: #0e2b47;
   font-family: 'maledpan';
   overflow-x: hidden;
 }
@@ -186,9 +186,9 @@ body {
   height: 80px;
   display: flex;
   z-index: 99;
+  background: #0e2b47;
   align-items: center;
   justify-content: center;
-  background: #ffffff;
 }
 .header a.logo-icon {
   display: flex;
@@ -201,7 +201,7 @@ body {
   height: 40px;
 }
 .header .title {
-  color: #b0bec5;
+  color: #a7c4e0;
   font-size: 1.8em;
   margin-left: auto;
   margin-right: auto;
@@ -214,32 +214,33 @@ body {
   cursor: default;
 }
 .header .title strong {
-  color: #37474f;
+  color: #eeeeee;
 }
 .header .btn-icon {
   font-size: 1.6em;
   width: 80px;
   height: 80px;
-  color: #b0bec5;
+  color: #a7c4e0;
   display: flex;
   justify-content: center;
   align-items: center;
   text-decoration: none;
 }
 .header .btn-icon.create {
-  color: #236cba;
+  color: #0e2b47;
 }
 .header .btn-text {
   font-size: 1em;
   text-decoration: none;
   padding: 8px 20px;
-  background: #eceff1;
-  color: #b0bec5;
+  color: #3e556b;
   border-radius: 5px;
+  border: 2px solid #3e556b;
+  box-sizing: border-box;
 }
 .header .btn-text.create {
-  background: #00b900;
   color: #FFFFFF;
+  border: 2px solid #FFFFFF;
 }
 .container {
   width: 60%;
@@ -255,13 +256,12 @@ body {
 .container .box .head {
   display: flex;
   height: 80px;
-  border-bottom: 2px solid #eceff1;
-  margin-bottom: 26.666666666666668px;
+  margin-bottom: 10px;
   align-items: center;
 }
 .container .box .head .title {
   font-size: 1.8em;
-  color: #37474f;
+  color: #eeeeee;
   margin-right: auto;
   white-space: nowrap;
   overflow: hidden;
@@ -273,9 +273,9 @@ body {
 .container .box .head a {
   font-size: 1em;
   text-decoration: none;
-  padding: 8px 20px;
-  background: #eceff1;
-  color: #b0bec5;
+  padding: 4px 20px;
+  border: 2px solid #3e556b;
+  color: #3e556b;
   border-radius: 5px;
 }
 .container .box .device-list {
@@ -294,8 +294,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: #eceff1;
-  color: #b0bec5;
+  background: #3e556b;
+  color: #a7c4e0;
   box-sizing: border-box;
   transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -306,9 +306,9 @@ body {
   transform: translateY(-5px);
 }
 .container .box .device-list a.device-card.create-button {
-  background: #FFFFFF;
-  border: 2px dashed #b0bec5;
-  color: #b0bec5;
+  background: transparent;
+  border: 2px dashed #a7c4e0;
+  color: #a7c4e0;
   font-size: 1.4em;
   align-items: center;
   box-shadow: none;
@@ -344,7 +344,7 @@ body {
   margin-left: 10px;
 }
 .container .box .device-list a.device-card.active {
-  background: #236cba;
+  background: #0e2b47;
   color: #e3f2fd;
 }
 .container .box .device-list a.device-card.active .temp {
@@ -380,17 +380,16 @@ body {
 }
 .container .box-empty h1 {
   font-size: 1.8em;
-  color: #263238;
+  color: #cccccc;
   margin-bottom: 5px;
 }
 .container .box-empty p {
   font-size: 1.4em;
   margin-bottom: 30px;
-  color: #37474f;
+  color: #eeeeee;
 }
 .container .box-empty a {
   width: 100%;
-  font-size: 1.4em;
   border: 0px;
   padding: 16px 0;
   margin: 0%;
@@ -398,7 +397,7 @@ body {
   border-radius: 5px;
   background: #00b900;
   color: #ffffff;
-  font-size: 1.2em;
+  font-size: 1.4em;
   font-weight: bold;
   text-decoration: none;
   text-align: center;
@@ -419,35 +418,30 @@ body {
   margin: 0 30%;
 }
 .form.login {
-  justify-content: center;
   position: fixed;
+  justify-content: center;
   top: 0;
   left: 0;
   height: 100%;
   width: 30%;
   margin: 0 35%;
-  text-align: center;
 }
 .form.login.logout {
   font-size: 1.6em;
-  color: #236cba;
+  color: #0e2b47;
 }
 .form.login p {
   font-size: 1.4em;
-  text-align: center;
+  margin-bottom: 32px;
+  color: #a7c4e0;
 }
 .form.login p a {
-  color: #236cba;
-  text-decoration: none;
+  color: #e3f2fd;
   font-weight: bold;
 }
-.form.login p a:hover {
-  text-decoration: underline;
-}
 .form.login .logo {
-  width: 30%;
-  margin: 0 35%;
-  margin-bottom: 15px;
+  width: 20%;
+  margin-bottom: 16px;
   float: left;
   display: block;
 }
@@ -459,7 +453,7 @@ body {
 .form .form-items {
   display: flex;
   flex-direction: column;
-  margin-bottom: 30px;
+  margin-bottom: 16px;
 }
 .form .form-items.hidden {
   display: none;
@@ -469,7 +463,7 @@ body {
 }
 .form .form-items label {
   font-size: 1em;
-  color: #37474f;
+  color: #eeeeee;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -480,7 +474,7 @@ body {
   margin-left: 5px;
 }
 .form .form-items label .label-button {
-  color: #236cba;
+  color: #0e2b47;
   text-decoration: none;
 }
 .form .form-items label .label-button:hover {
@@ -495,24 +489,32 @@ body {
   width: 100%;
   float: left;
   display: block;
-  font-size: 1.2em;
+  font-size: 1.4em;
   padding: 16px 16px;
-  background: #eceff1;
-  color: #236cba;
+  background: transparent;
+  color: #a7c4e0;
   margin: 0%;
-  border-radius: 5px;
   box-sizing: border-box;
-  border: 2px solid #eceff1;
+  border: 2px solid #3e556b;
   resize: none;
+  outline: none;
+  border-radius: 5px;
   transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
+  font-weight: bold;
+  font-family: 'maledpan';
+  line-height: 1.25em;
 }
 .form .form-items .input-text.loading,
 .form .form-items .input-textarea.loading {
   background: transparent;
-  color: #236cba;
+  color: #0e2b47;
+}
+.form .form-items .input-text::placeholder,
+.form .form-items .input-textarea::placeholder {
+  color: #3e556b;
 }
 .form .form-items .input-text:hover,
 .form .form-items .input-textarea:hover {
@@ -520,28 +522,31 @@ body {
 }
 .form .form-items .input-text:focus,
 .form .form-items .input-textarea:focus {
-  border: 2px solid #236cba;
+  color: #FFFFFF;
+  border: 2px solid #FFFFFF;
 }
 .form .form-items .input-text:disabled,
 .form .form-items .input-textarea:disabled {
-  background: #eceff1;
-  color: #236cba;
+  background: #3e556b;
+  color: #0e2b47;
 }
 .form .form-items .input-textarea {
   height: 100px;
 }
 .form .form-items .btn-submit {
   width: 100%;
-  font-size: 1.4em;
   border: 0px;
   padding: 16px 0;
   margin: 0%;
-  margin-top: 15px;
+  margin-top: 16px;
   border-radius: 5px;
-  background: #236cba;
-  color: #ffffff;
-  font-size: 1.2em;
+  background: #FFFFFF;
+  color: #0e2b47;
+  font-size: 1.4em;
   font-weight: bold;
+  margin-left: auto;
+  font-family: 'maledpan';
+  line-height: 1.25em;
 }
 .form .form-items .btn-submit i {
   margin-left: 10px;
@@ -552,8 +557,8 @@ body {
   background: #3581c2;
 }
 .form .form-items .btn-submit.loading {
-  background: #eceff1;
-  color: #b0bec5;
+  background: #3e556b;
+  color: #a7c4e0;
   box-shadow: none;
 }
 .form .form-items .btn-submit.completed {
@@ -561,12 +566,12 @@ body {
   box-shadow: none;
 }
 .form .form-items .note {
-  color: #37474f;
+  color: #eeeeee;
   font-size: 1em;
   margin-top: 10px;
 }
 .form .form-items .note a {
-  color: #236cba;
+  color: #0e2b47;
   text-decoration: none;
   font-weight: bold;
 }
@@ -586,7 +591,7 @@ body {
 .form .form-items .lists {
   display: flex;
   flex-direction: column;
-  border: 2px solid #eceff1;
+  border: 2px solid #3e556b;
   border-radius: 5px;
   font-size: 1.2em;
   margin-bottom: 10px;
@@ -594,7 +599,7 @@ body {
 .form .form-items .lists .list-items {
   display: flex;
   flex-direction: row;
-  border-bottom: 1px solid #eceff1;
+  border-bottom: 1px solid #3e556b;
 }
 .form .form-items .lists .list-items:last-child {
   border-bottom: 0;
@@ -612,11 +617,11 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #eceff1;
+  color: #3e556b;
 }
 .form .form-items .lists .list-items .btn:hover {
   cursor: pointer;
-  color: #b0bec5;
+  color: #a7c4e0;
 }
 .form .toggle-items {
   display: flex;
@@ -630,10 +635,10 @@ body {
 .form .toggle-items i {
   font-size: 1.75em;
   padding: 0;
-  color: #b0bec5;
+  color: #a7c4e0;
 }
 .form .toggle-items i.fa-toggle-on {
-  color: #236cba;
+  color: #0e2b47;
   text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
 }
 .form .toggle-items i:hover {
@@ -656,14 +661,14 @@ body {
   font-size: 5.4em;
   line-height: 1.2em;
   font-weight: bold;
-  color: #236cba;
+  color: #0e2b47;
 }
 .device-info .info .temperature-current.over {
   color: #ff1744;
 }
 .device-info .info p {
   font-size: 1em;
-  color: #b0bec5;
+  color: #ffffff;
 }
 .device-info .info:hover {
   cursor: default;
@@ -676,7 +681,7 @@ body {
 }
 .device-info .temperature-stat .box {
   width: 31.33%;
-  background: #eceff1;
+  background: #3e556b;
   margin-right: 3%;
   padding: 0 5%;
   height: 150px;
@@ -692,11 +697,11 @@ body {
 .device-info .temperature-stat .box h3 {
   font-size: 2.16em;
   line-height: 1.2em;
-  color: #37474f;
+  color: #eeeeee;
 }
 .device-info .temperature-stat .box p {
   font-size: 1em;
-  color: #b0bec5;
+  color: #ffffff;
 }
 .device-info .temperature-stat .box.highest .over {
   color: #ff1744;
@@ -712,7 +717,7 @@ body {
   display: flex;
   height: 150px;
   margin-bottom: 40px;
-  background: #eceff1;
+  background: #3e556b;
   border-radius: 5px;
   box-sizing: border-box;
   padding: 5%;
@@ -724,7 +729,7 @@ body {
 .device-info h2 {
   font-size: 1.4em;
   margin-bottom: 15px;
-  color: #b0bec5;
+  color: #ffffff;
   font-weight: normal;
 }
 .device-info .history {
@@ -733,7 +738,7 @@ body {
   flex-direction: column;
   box-sizing: border-box;
   border-radius: 5px;
-  background: #eceff1;
+  background: #3e556b;
 }
 .device-info .history .logitems {
   display: flex;
@@ -741,8 +746,8 @@ body {
   align-items: center;
   padding: 15px 25px;
   font-size: 1.4em;
-  color: #37474f;
-  border-bottom: 1px dotted #b0bec5;
+  color: #eeeeee;
+  border-bottom: 1px dotted #a7c4e0;
 }
 .device-info .history .logitems:last-child {
   border-bottom: 0;
@@ -755,7 +760,7 @@ body {
 }
 .device-info .history .logitems .status {
   width: 5%;
-  color: #236cba;
+  color: #0e2b47;
   font-size: 0.7em;
 }
 .device-info .history .logitems .time {
@@ -768,7 +773,7 @@ body {
   width: 5%;
   text-align: right;
   font-size: 0.7em;
-  color: #b0bec5;
+  color: #a7c4e0;
 }
 .device-info .history .logitems .temp {
   width: 20%;
@@ -782,14 +787,14 @@ body {
   justify-content: center;
   font-size: 1.4em;
   font-style: italic;
-  color: #b0bec5;
+  color: #a7c4e0;
 }
 .device-info .history .empty {
   width: 100%;
   padding: 15% 0;
   display: flex;
   justify-content: center;
-  color: #b0bec5;
+  color: #a7c4e0;
   font-size: 1.4em;
   font-style: italic;
 }
@@ -797,7 +802,7 @@ body {
   width: 60%;
   margin: 0 20%;
   margin-bottom: 2%;
-  color: #b0bec5;
+  color: #a7c4e0;
   display: flex;
   font-size: 1em;
   flex-direction: row;
@@ -809,8 +814,8 @@ body {
 .footer a {
   padding: 3px 10px;
   text-decoration: none;
-  background: #eceff1;
-  color: #b0bec5;
+  background: #3e556b;
+  color: #a7c4e0;
   border-radius: 5px;
 }
 #progress-bar {
@@ -819,7 +824,7 @@ body {
   left: 0px;
   width: 5%;
   height: 3px;
-  background: #236cba;
+  background: #0e2b47;
   float: left;
   display: block;
   z-index: 100;
@@ -832,7 +837,7 @@ body {
   width: 5%;
   height: 3px;
   border-radius: 20%;
-  background: #236cba;
+  background: #0e2b47;
   float: left;
   display: block;
   z-index: 100;
@@ -877,15 +882,15 @@ body {
 }
 .message-box .icon {
   font-size: 1.8em;
-  color: #b0bec5;
+  color: #a7c4e0;
 }
 .message-box .msg {
   font-size: 1.8em;
-  color: #37474f;
+  color: #eeeeee;
   margin-bottom: 25px;
 }
 .message-box .msg strong {
-  color: #37474f;
+  color: #eeeeee;
 }
 .message-box .control {
   display: flex;
@@ -895,13 +900,13 @@ body {
 .message-box .control p {
   padding: 14px 0;
   font-size: 1.4em;
-  color: #b0bec5;
+  color: #a7c4e0;
 }
 .message-box .control a.btn {
   text-decoration: none;
-  background: #236cba;
+  background: #0e2b47;
   color: #FFFFFF;
-  font-size: 1.2em;
+  font-size: 1.4em;
   font-family: initial;
   padding: 14px 28px;
   margin: 0 10px;
@@ -913,8 +918,8 @@ body {
   margin-left: 15px;
 }
 .message-box .control a.btn.btn-not-Accept {
-  background: #eceff1;
-  color: #b0bec5;
+  background: #3e556b;
+  color: #a7c4e0;
 }
 #disconnect-bar {
   position: fixed;
@@ -923,8 +928,8 @@ body {
   width: 100%;
   height: 60px;
   display: flex;
-  background: #eceff1;
-  color: #b0bec5;
+  background: #3e556b;
+  color: #a7c4e0;
   font-size: 1.4em;
   justify-content: center;
   align-items: center;
@@ -964,14 +969,14 @@ body {
     font-size: 1.2em;
     width: 60px;
     height: 60px;
-    color: #b0bec5;
+    color: #a7c4e0;
     display: flex;
     justify-content: center;
     align-items: center;
     text-decoration: none;
   }
   .header .btn-icon.create {
-    color: #236cba;
+    color: #0e2b47;
   }
   .header .btn-text {
     font-size: 1em;
@@ -1114,7 +1119,7 @@ body {
   .form .form-items .lists {
     display: flex;
     flex-direction: column;
-    border: 2px solid #eceff1;
+    border: 2px solid #3e556b;
     border-radius: 5px;
     font-size: 1.2em;
     margin-bottom: 10px;
@@ -1122,7 +1127,7 @@ body {
   .form .form-items .lists .list-items {
     display: flex;
     flex-direction: row;
-    border-bottom: 1px solid #eceff1;
+    border-bottom: 1px solid #3e556b;
   }
   .form .form-items .lists .list-items:last-child {
     border-bottom: 0;
@@ -1140,11 +1145,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #eceff1;
+    color: #3e556b;
   }
   .form .form-items .lists .list-items .btn:hover {
     cursor: pointer;
-    color: #b0bec5;
+    color: #a7c4e0;
   }
   .form .toggle-items {
     display: flex;
@@ -1158,10 +1163,10 @@ body {
   .form .toggle-items i {
     font-size: 1.75em;
     padding: 0;
-    color: #b0bec5;
+    color: #a7c4e0;
   }
   .form .toggle-items i.fa-toggle-on {
-    color: #236cba;
+    color: #0e2b47;
     text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
   }
   .form .toggle-items i:hover {
@@ -1218,7 +1223,7 @@ body {
     flex-direction: column;
     box-sizing: border-box;
     border-radius: 5px;
-    background: #eceff1;
+    background: #3e556b;
   }
   .device-info .history .logitems {
     padding: 15px 5%;
@@ -1283,15 +1288,15 @@ body {
   }
   .message-box .icon {
     font-size: 1.8em;
-    color: #b0bec5;
+    color: #a7c4e0;
   }
   .message-box .msg {
     font-size: 1.8em;
-    color: #37474f;
+    color: #eeeeee;
     margin-bottom: 25px;
   }
   .message-box .msg strong {
-    color: #37474f;
+    color: #eeeeee;
   }
   .message-box .control {
     display: flex;
@@ -1301,11 +1306,11 @@ body {
   .message-box .control p {
     padding: 14px 0;
     font-size: 1.4em;
-    color: #b0bec5;
+    color: #a7c4e0;
   }
   .message-box .control a.btn {
     text-decoration: none;
-    background: #236cba;
+    background: #0e2b47;
     color: #FFFFFF;
     font-size: 1.2em;
     font-family: initial;
@@ -1319,8 +1324,8 @@ body {
     margin-left: 15px;
   }
   .message-box .control a.btn.btn-not-Accept {
-    background: #eceff1;
-    color: #b0bec5;
+    background: #3e556b;
+    color: #a7c4e0;
   }
   #disconnect-bar {
     bottom: -60px;
