--- a/app/less/config.less
+++ b/app/less/config.less
@@ -24,7 +24,7 @@
 
 @border_color: #3e556b;
 @border_color_hover: #a7c4e0;
-@green_color: #00B900;
+@green_color: #27f66a;
 @red_color: #FF1744;
 @red_color_light: #FFCDD2;
 
