--- a/app/less/style.less
+++ b/app/less/style.less
@@ -140,6 +140,7 @@
 				flex-direction: column;
 				justify-content: center;
 				background: @border_color;
+				background: @green_color;
 				color: @border_color_hover;
 				box-sizing: border-box;
 				.transitionAnimation(0.3s);
@@ -191,8 +192,8 @@
 				}
 
 				&.active {
-					background: @primary_color;
-					color: @primary_color_light;
+					background: @green_color;
+					color: #FFFFFF;
 
 					.temp {
 						color: #FFFFFF;
