--- a/app/less/config.less
+++ b/app/less/config.less
@@ -17,6 +17,7 @@
 @primary_color_dark: #3581C2;
 @primary_color_light: #E3F2FD;
 @bg_color: #FFFFFF;
+@white_color: #FFFFFF;
 
 @text_color_normal: #EEEEEE;
 @text_color_light: #FFFFFF;
@@ -24,7 +25,7 @@
 
 @border_color: #3e556b;
 @border_color_hover: #a7c4e0;
-@green_color: #27f66a;
+@green_color: #1DB954;
 @red_color: #FF1744;
 @red_color_light: #FFCDD2;
 
