--- a/app/less/config.less
+++ b/app/less/config.less
@@ -13,7 +13,10 @@
 @font_family_topic: 'maledpan';
 
 // http://www.color-hex.com/color/0e2b47
-@primary_color: #0e2b47; // Active Color
+@primary_color: #0e2b47;
+@primary_color_secondary: #264059;
+@primary_color_font: #9eaab5;
+
 @primary_color_dark: #3581C2;
 @primary_color_light: #E3F2FD;
 @bg_color: #FFFFFF;
@@ -25,37 +28,52 @@
 
 @border_color: #3e556b;
 @border_color_hover: #a7c4e0;
-@green_color: #1DB954;
-@orange_color: #F78E11;
-@orange_color_text: #191500; 
-@red_color: #FF1744;
-@red_color_light: #FFCDD2;
+
+@green_color: #43A047;
+@green_color_secondary: #388E3C;
+@green_color_font: #A5D6A7;
+
+@orange_color: #FF8F00;
+@orange_color_secondary: #FFA000;
+@orange_color_font: #FFE082;
+
+@red_color: #C62828;
+@red_color_secondary: #E53935;
+@red_color_font: #EF9A9A;
 
 html {
     -ms-touch-action: manipulation;
     touch-action: manipulation;
 }
 
-// a[href], button {
-//     -ms-touch-action: none; /* IE10 */
-//     touch-action: none;     /* IE11 */
-// }
-
 body {
     background: @primary_color;
     font-family: @font_family_topic;
     overflow-x: hidden;
 
+    .bg-secondary { background: @primary_color_secondary !important; }
+    .font-color { color: @primary_color_font !important; }
+    .border-color { border-bottom: 1px solid @primary_color_secondary !important; }
+
     &.alert {
         background: @red_color;
+        .bg-secondary { background: @red_color_secondary !important; }
+        .font-color { color: @red_color_font !important; }
+        .border-color { border-bottom: 1px solid @red_color_secondary !important; }
     }
 
     &.active {
         background: @green_color;
+        .bg-secondary { background: @green_color_secondary !important; }
+        .font-color { color: @green_color_font !important; }
+        .border-color { border-bottom: 1px solid @green_color_secondary !important; }
     }
 
     &.disconnect {
         background: @orange_color;
+        .bg-secondary { background: @orange_color_secondary !important; }
+        .font-color { color: @orange_color_font !important; }
+        .border-color { border-bottom: 1px solid @orange_color_secondary !important; }
     }
 }
 
