--- a/app/less/style.less
+++ b/app/less/style.less
@@ -33,7 +33,7 @@
 	}
 
 	.title {
-		color: @border_color_hover;
+		color: @text_color_normal;
 		font-size: @fontsize_topic;
 		margin-left: auto;
 		margin-right: auto;
@@ -45,24 +45,17 @@
 		&:hover {
 			cursor: default;
 		}
-		strong {
-			color: @text_color_normal;
-		}
 	}
 
 	.btn-icon {
 		font-size: @fontsize_icon;
 		width: @header_height;
 		height: @header_height;
-		color: @border_color_hover;
+		color: @white_color;
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		text-decoration: none;
-
-		&.create {
-			color: @primary_color;
-		}
 	}
 
 	.btn-text {
@@ -70,9 +63,11 @@
 		text-decoration: none;
 		padding: (@header_height / 10) (@header_height / 4);
 		border-radius: @radius;
-		background: @white_color;
-		color: @primary_color;
+		border: 2px solid @white_color;
+		border-radius: @radius;
+		color: @white_color;
 		box-sizing: border-box;
+		font-weight: bold;
 	}
 }
 
@@ -187,25 +182,21 @@
 
 				&.lostconnect {
 					background: @orange_color;
-					color: @orange_color_text;
+					color: @white_color;
+					.info { color: @orange_color_font; }
 				}
 
 				&.active {
 					background: @green_color;
 					color: @white_color;
-
-					.temp {
-						color: @white_color;
-					}
+					.info { color: @green_color_font; }
 				}
 				
 				&.alret {
 					background: @red_color;
 					color: @white_color;
+					.info { color: @red_color_font; }
 
-					.desc , .status-icon {
-						color: @red_color_light;
-					}
 					-webkit-animation-name: bounce;
 					animation-name: bounce;
 					-webkit-animation-duration: 1s;
@@ -517,14 +508,15 @@
 		justify-content: space-between;
 		font-size: @fontsize_normal;
 		margin-bottom: 15px;
+		color: @white_color;
 
 		i {
 			font-size: @fontsize_normal * 1.25;
 			padding: 0;
-			color: @border_color_hover;
+			color: @border_color;
 
 			&.fa-toggle-on {
-				color: @primary_color;
+				color: @green_color;
 				text-shadow: 1px 2px 3px rgba(0,0,0,0.2);
 			}
 
@@ -546,18 +538,30 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		margin-bottom: 40px;
+		margin-bottom: @header_height / 4;
 
 		.temperature-current {
-			font-size: @fontsize_topic * 3;
 			line-height: 1.2em;
 			font-weight: bold;
 			color: @white_color;
+			margin-bottom: 10px;
+
+			.value {
+				font-size: @fontsize_topic * 4;
+				text-shadow: 3px 6px 15px rgba(0,0,0,0.1);
+			}
+			.unit {
+				font-size: @fontsize_normal;
+			}
 		}
 
 		p {
 			font-size: @fontsize_mini;
 			color: @text_color_light;
+
+			i {
+				margin-left: 10px;
+			}
 		}
 
 		&:hover {
@@ -569,7 +573,7 @@
 		display: flex;
 		flex-direction: row;
 		flex-wrap: wrap;
-		margin-bottom: 40px;
+		margin-bottom: @header_height / 2;
 
 		.box {
 			width: 31.33%;
@@ -581,38 +585,28 @@
 			justify-content: center;
 			border-radius: @radius;
 			box-sizing: border-box;
-			border: 2px solid @white_color;
+			color: @text_color_normal;
 
 			&:nth-child(3n+0) {
 				margin-right: 0%;
 			}
 
-			h3 {
-				font-size: @fontsize_topic * 1.2;
-				line-height: 1.2em;
-				color: @text_color_normal;
+			div {
+				.value {
+					font-size: @fontsize_topic * 1.2;
+					line-height: 1.2em;
+				}
+				.unit {
+					font-size: @fontsize_mini;
+				}
 			}
 			p {
 				font-size: @fontsize_mini;
-				color: @text_color_light;
 			}
 
 			&:hover {
 				cursor: default;
 			}
-		}
-	}
-	
-	.graph {
-		width: 100%;
-		display: flex;
-		height: 150px;
-		margin-bottom: 40px;
-		box-sizing: border-box;
-
-		canvas {
-			width: 100%;
-			height: 150px;
 		}
 	}
 
@@ -621,6 +615,22 @@
 		margin-bottom: 15px;
 		color: @text_color_light;
 		font-weight: normal;
+
+		i {
+			margin-right: 15px;
+		}
+	}
+	
+	.graph {
+		width: 100%;
+		display: flex;
+		height: 100px;
+		margin-bottom: @header_height / 2;
+		box-sizing: border-box;
+
+		canvas {
+			width: 100%;
+		}
 	}
 
 	.history{
@@ -648,13 +658,13 @@
 
 			&.alert {
 				.status {
-					color: @red_color;
+					color: @white_color;
 				}
 			}
 
 			.status {
 				width: 5%;
-				color: @primary_color;
+				color: transparent;
 				font-size: @fontsize_normal * 0.5;
 			}
 
@@ -668,7 +678,6 @@
 				width: 5%;
 				text-align: right;
 				font-size: @fontsize_normal * 0.5;
-				color: @border_color_hover;
 			}
 			.temp {
 				width: 20%;
@@ -742,7 +751,7 @@
 	left: 0;
 	width: 5%;
 	height: 3px;
-	border-radius: 20%;
+	border-radius: @radius;
 	background: @white_color;
 	float: left;
 	display: block;
@@ -831,31 +840,6 @@
 				color: @border_color_hover;
 			}
 		}
-	}
-}
-
-#disconnect-bar {
-	position: fixed;
-	bottom: -60px;
-	left: 0px;
-	width: 100%;
-	height: 60px;
-	display: flex;
-	background: @border_color;
-	color: @border_color_hover;
-	font-size: @fontsize_normal;
-	justify-content: center;
-	align-items: center;
-	z-index: 9999;
-	
-	.transitionAnimation(0.3s);
-
-	&.active {
-		transform: translateY(-100%);
-	}
-
-	i {
-		margin-right: 15px;
 	}
 }
 /* Other Device and Screen */
