--- a/app/less/config.less
+++ b/app/less/config.less
@@ -10,7 +10,7 @@
 }
 
 @FontStylePrimary: sans-serif;
-@font_family_topic: 'maledpan';
+@font_family_maledpan: 'maledpan';
 
 // http://www.color-hex.com/color/0e2b47
 @primary_color: #0e2b47;
@@ -48,7 +48,7 @@ html {
 
 body {
     background: @primary_color;
-    font-family: @font_family_topic;
+    font-family: @font_family_maledpan;
     overflow-x: hidden;
 
     .bg-secondary { background: @primary_color_secondary !important; }
