--- a/app/less/style.less
+++ b/app/less/style.less
@@ -362,7 +362,7 @@
 			outline: none;
 			border-radius: @radius;
 			font-weight: bold;
-			font-family: @font_family_topic;
+			font-family: @font_family_maledpan;
 			.transitionAnimation(0.3s);
 			
 			&.loading {
@@ -406,7 +406,7 @@
 			font-size: @fontsize_input;
 			font-weight: bold;
 			margin-left: auto;
-			font-family: @font_family_topic;
+			font-family: @font_family_maledpan;
 			line-height: 1.25em;
 
 			i {
