--- a/app/less/config.less
+++ b/app/less/config.less
@@ -9,37 +9,24 @@
     font-style: normal;
 }
 
-@FontStylePrimary: sans-serif;
+@font_sans_serif: sans-serif;
 @font_family_maledpan: 'maledpan';
 
 // http://www.color-hex.com/color/0e2b47
 @primary_color: #0e2b47;
 @primary_color_secondary: #264059;
 @primary_color_font: #9eaab5;
-
-@primary_color_dark: #3581C2;
-@primary_color_light: #E3F2FD;
-@bg_color: #FFFFFF;
-@white_color: #FFFFFF;
-
-@text_color_normal: #EEEEEE;
-@text_color_light: #FFFFFF;
-@text_color_dark: #CCCCCC;
-
-@border_color: #3e556b;
-@border_color_hover: #a7c4e0;
-
 @green_color: #43A047;
 @green_color_secondary: #388E3C;
 @green_color_font: #A5D6A7;
-
 @orange_color: #FF8F00;
 @orange_color_secondary: #FFA000;
 @orange_color_font: #FFE082;
-
 @red_color: #C62828;
 @red_color_secondary: #E53935;
 @red_color_font: #EF9A9A;
+
+@white_color: #FFFFFF;
 
 html {
     -ms-touch-action: manipulation;
