--- a/app/css/style.css
+++ b/app/css/style.css
@@ -246,7 +246,7 @@ body.disconnect .border-color {
   height: 40px;
 }
 .header .title {
-  color: #eeeeee;
+  color: #ffffff;
   font-size: 1.8em;
   margin-left: auto;
   margin-right: auto;
@@ -297,7 +297,7 @@ body.disconnect .border-color {
 }
 .container .box .head .title {
   font-size: 1.8em;
-  color: #eeeeee;
+  color: #9eaab5;
   margin-right: auto;
   white-space: nowrap;
   overflow: hidden;
@@ -310,8 +310,8 @@ body.disconnect .border-color {
   font-size: 1em;
   text-decoration: none;
   padding: 4px 20px;
-  border: 2px solid #3e556b;
-  color: #3e556b;
+  background: #264059;
+  color: #9eaab5;
   border-radius: 5px;
 }
 .container .box .device-list {
@@ -330,8 +330,8 @@ body.disconnect .border-color {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background: #3e556b;
-  color: #a7c4e0;
+  background: #264059;
+  color: #9eaab5;
   box-sizing: border-box;
   transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
@@ -343,8 +343,8 @@ body.disconnect .border-color {
 }
 .container .box .device-list a.device-card.create-button {
   background: transparent;
-  border: 2px dashed #a7c4e0;
-  color: #a7c4e0;
+  border: 2px dashed #9eaab5;
+  color: #9eaab5;
   font-size: 1.4em;
   align-items: center;
   box-shadow: none;
@@ -422,13 +422,13 @@ body.disconnect .border-color {
 }
 .container .box-empty h1 {
   font-size: 1.8em;
-  color: #cccccc;
+  color: #9eaab5;
   margin-bottom: 5px;
 }
 .container .box-empty p {
   font-size: 1.4em;
   margin-bottom: 30px;
-  color: #eeeeee;
+  color: #9eaab5;
 }
 .container .box-empty a {
   width: 100%;
@@ -438,7 +438,6 @@ body.disconnect .border-color {
   margin-top: 15px;
   border-radius: 5px;
   background: #43a047;
-  color: #ffffff;
   font-size: 1.4em;
   font-weight: bold;
   text-decoration: none;
@@ -470,15 +469,15 @@ body.disconnect .border-color {
 }
 .form.login.logout {
   font-size: 1.6em;
-  color: #0e2b47;
+  color: #ffffff;
 }
 .form.login p {
   font-size: 1.4em;
   margin-bottom: 32px;
-  color: #a7c4e0;
+  color: #9eaab5;
 }
 .form.login p a {
-  color: #e3f2fd;
+  color: #ffffff;
   font-weight: bold;
 }
 .form.login .logo {
@@ -505,7 +504,7 @@ body.disconnect .border-color {
 }
 .form .form-items label {
   font-size: 1em;
-  color: #eeeeee;
+  color: #9eaab5;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
@@ -516,12 +515,14 @@ body.disconnect .border-color {
   margin-left: 5px;
 }
 .form .form-items label .label-button {
-  color: #0e2b47;
+  color: #9eaab5;
   text-decoration: none;
+  background: #264059;
+  padding: 0px 10px;
+  border-radius: 5px;
 }
 .form .form-items label .label-button:hover {
   cursor: pointer;
-  text-decoration: underline;
 }
 .form .form-items label:hover {
   cursor: pointer;
@@ -534,10 +535,10 @@ body.disconnect .border-color {
   font-size: 1.4em;
   padding: 13.333333333333334px 16px;
   background: transparent;
-  color: #a7c4e0;
+  color: #9eaab5;
   margin: 0%;
   box-sizing: border-box;
-  border: 2px solid #3e556b;
+  border: 2px solid #264059;
   resize: none;
   outline: none;
   border-radius: 5px;
@@ -555,7 +556,7 @@ body.disconnect .border-color {
 }
 .form .form-items .input-text::placeholder,
 .form .form-items .input-textarea::placeholder {
-  color: #3e556b;
+  color: #264059;
 }
 .form .form-items .input-text:hover,
 .form .form-items .input-textarea:hover {
@@ -568,7 +569,7 @@ body.disconnect .border-color {
 }
 .form .form-items .input-text:disabled,
 .form .form-items .input-textarea:disabled {
-  background: #3e556b;
+  background: #264059;
   color: #0e2b47;
 }
 .form .form-items .input-textarea {
@@ -595,19 +596,19 @@ body.disconnect .border-color {
 }
 .form .form-items .btn-submit:hover {
   cursor: pointer;
-  background: #3581c2;
 }
 .form .form-items .btn-submit.loading {
-  background: #3e556b;
-  color: #a7c4e0;
+  background: #264059;
+  color: #9eaab5;
   box-shadow: none;
 }
 .form .form-items .btn-submit.completed {
   background: #43a047;
+  color: #ffffff;
   box-shadow: none;
 }
 .form .form-items .note {
-  color: #eeeeee;
+  color: #9eaab5;
   font-size: 1em;
   margin-top: 10px;
 }
@@ -632,7 +633,7 @@ body.disconnect .border-color {
 .form .form-items .lists {
   display: flex;
   flex-direction: column;
-  border: 2px solid #3e556b;
+  border: 2px solid #264059;
   border-radius: 5px;
   font-size: 1.2em;
   margin-bottom: 10px;
@@ -640,7 +641,7 @@ body.disconnect .border-color {
 .form .form-items .lists .list-items {
   display: flex;
   flex-direction: row;
-  border-bottom: 1px solid #3e556b;
+  border-bottom: 1px solid #264059;
 }
 .form .form-items .lists .list-items:last-child {
   border-bottom: 0;
@@ -651,6 +652,7 @@ body.disconnect .border-color {
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  color: #ffffff;
 }
 .form .form-items .lists .list-items .btn {
   width: 15%;
@@ -658,11 +660,11 @@ body.disconnect .border-color {
   display: flex;
   align-items: center;
   justify-content: center;
-  color: #3e556b;
+  color: #264059;
 }
 .form .form-items .lists .list-items .btn:hover {
   cursor: pointer;
-  color: #a7c4e0;
+  color: #9eaab5;
 }
 .form .toggle-items {
   display: flex;
@@ -677,7 +679,7 @@ body.disconnect .border-color {
 .form .toggle-items i {
   font-size: 1.75em;
   padding: 0;
-  color: #3e556b;
+  color: #264059;
 }
 .form .toggle-items i.fa-toggle-on {
   color: #43a047;
@@ -738,7 +740,7 @@ body.disconnect .border-color {
   justify-content: center;
   border-radius: 5px;
   box-sizing: border-box;
-  color: #eeeeee;
+  color: #ffffff;
 }
 .device-info .temperature-stat .box:nth-child(3n+0) {
   margin-right: 0%;
@@ -787,8 +789,8 @@ body.disconnect .border-color {
   align-items: center;
   padding: 15px 0;
   font-size: 1.4em;
-  color: #eeeeee;
-  border-bottom: 1px dotted #a7c4e0;
+  color: #ffffff;
+  border-bottom: 1px dotted #9eaab5;
 }
 .device-info .history .logitems:last-child {
   border-bottom: 0;
@@ -827,14 +829,14 @@ body.disconnect .border-color {
   justify-content: center;
   font-size: 1.4em;
   font-style: italic;
-  color: #a7c4e0;
+  color: #9eaab5;
 }
 .device-info .history .empty {
   width: 100%;
   padding: 15% 0;
   display: flex;
   justify-content: center;
-  color: #a7c4e0;
+  color: #9eaab5;
   font-size: 1.4em;
   font-style: italic;
 }
@@ -842,7 +844,7 @@ body.disconnect .border-color {
   width: 60%;
   margin: 0 20%;
   margin-bottom: 2%;
-  color: #a7c4e0;
+  color: #9eaab5;
   display: flex;
   font-size: 1em;
   flex-direction: row;
@@ -854,8 +856,8 @@ body.disconnect .border-color {
 .footer a {
   padding: 3px 10px;
   text-decoration: none;
-  background: #3e556b;
-  color: #a7c4e0;
+  background: #264059;
+  color: #9eaab5;
   border-radius: 5px;
 }
 #progress-bar {
@@ -914,23 +916,13 @@ body.disconnect .border-color {
   justify-content: center;
   align-items: center;
 }
-.message-box.-minibox {
-  padding: 8% 0%;
-}
-.message-box.-minibox .msg {
-  margin-bottom: 4%;
-}
-.message-box .icon {
-  font-size: 1.8em;
-  color: #a7c4e0;
-}
 .message-box .msg {
   font-size: 1.8em;
-  color: #eeeeee;
+  color: #9eaab5;
   margin-bottom: 25px;
 }
 .message-box .msg strong {
-  color: #eeeeee;
+  color: #ffffff;
 }
 .message-box .control {
   display: flex;
@@ -940,14 +932,13 @@ body.disconnect .border-color {
 .message-box .control p {
   padding: 14px 0;
   font-size: 1.4em;
-  color: #a7c4e0;
+  color: #9eaab5;
 }
 .message-box .control a.btn {
   text-decoration: none;
-  background: #0e2b47;
-  color: #ffffff;
+  background: #ffffff;
+  color: #0e2b47;
   font-size: 1.4em;
-  font-family: initial;
   padding: 14px 28px;
   margin: 0 10px;
   font-weight: bold;
@@ -958,398 +949,7 @@ body.disconnect .border-color {
   margin-left: 15px;
 }
 .message-box .control a.btn.btn-not-Accept {
-  background: #3e556b;
-  color: #a7c4e0;
+  background: #264059;
+  color: #9eaab5;
 }
 /* Other Device and Screen */
-@media only screen and (min-width: 0px) and (max-width: 519px) {
-  .header {
-    width: 100%;
-    padding: 0;
-    height: 60px;
-  }
-  .header a.logo-icon {
-    margin-left: 5%;
-  }
-  .header a.logo-icon img {
-    padding: 15px 0;
-    height: 30px;
-  }
-  .header .title {
-    font-size: 1.8em;
-  }
-  .header .title:first-child {
-    padding-left: 5%;
-  }
-  .header .btn-icon {
-    font-size: 1.2em;
-    width: 60px;
-    height: 60px;
-    color: #a7c4e0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-decoration: none;
-  }
-  .header .btn-icon.create {
-    color: #0e2b47;
-  }
-  .header .btn-text {
-    font-size: 1em;
-    padding: 6px 15px;
-    border-radius: 5px;
-    margin-right: 5%;
-  }
-  .container {
-    width: 100%;
-    margin: 0;
-  }
-  .container .box .head {
-    padding: 0 5%;
-    height: 60px;
-    margin-bottom: 20px;
-  }
-  .container .box .head .title {
-    font-size: 1.8em;
-  }
-  .container .box .head a {
-    font-size: 1em;
-    padding: 6px 15px;
-    border-radius: 5px;
-  }
-  .container .box .device-list {
-    padding: 0 5%;
-    margin-bottom: 30px;
-  }
-  .container .box .device-list a.device-card {
-    width: 47.5%;
-    padding: 5%;
-    margin-right: 5%;
-    margin-bottom: 5%;
-    height: 150px;
-    border-radius: 5px;
-  }
-  .container .box .device-list a.device-card.create-button {
-    font-size: 1.4em;
-  }
-  .container .box .device-list a.device-card:nth-child(2n+0) {
-    margin-right: 0%;
-  }
-  .container .box .device-list a.device-card:nth-child(4n+0) {
-    margin-right: 0%;
-  }
-  .container .box .device-list a.device-card .name {
-    font-size: 1.4em;
-  }
-  .container .box .device-list a.device-card .temp {
-    font-size: 2.16em;
-  }
-  .container .box .device-list a.device-card .info {
-    font-size: 1em;
-  }
-  .container .box .device-list a.device-card .info .updated {
-    font-size: 1em;
-  }
-  .container .box .device-list a.device-card .info .icon {
-    margin-left: 10px;
-  }
-  .container .box-empty {
-    width: 90%;
-    margin: 0 5%;
-  }
-  .container .box-empty h1 {
-    font-size: 1.8em;
-    margin-bottom: 5px;
-  }
-  .container .box-empty p {
-    font-size: 1.4em;
-    margin-bottom: 30px;
-  }
-  .container .box-empty a {
-    font-size: 1.4em;
-    padding: 16px 0;
-    margin-top: 15px;
-    border-radius: 5px;
-    font-size: 1.2em;
-  }
-  .form {
-    width: 90%;
-    margin: 30px 5%;
-    margin-top: 60px;
-  }
-  .form.vertical-center {
-    position: initial;
-    margin: 30px 5%;
-  }
-  .form.login {
-    position: fixed;
-    height: 100%;
-    width: 90%;
-    margin: 0 5%;
-  }
-  .form.login.logout {
-    font-size: 1.2em;
-  }
-  .form.login p {
-    font-size: 1.4em;
-  }
-  .form.login .logo {
-    width: 30%;
-    margin: 0 35%;
-    margin-bottom: 15px;
-  }
-  .form .form-items {
-    margin-bottom: 30px;
-  }
-  .form .form-items label {
-    font-size: 1em;
-    margin-bottom: 10px;
-  }
-  .form .form-items label i {
-    margin-left: 5px;
-  }
-  .form .form-items .input-text,
-  .form .form-items .input-textarea {
-    font-size: 1.2em;
-    padding: 16px 16px;
-    border-radius: 5px;
-  }
-  .form .form-items .btn-submit {
-    font-size: 1.4em;
-    padding: 16px 0;
-    margin-top: 15px;
-    border-radius: 5px;
-    font-size: 1.2em;
-  }
-  .form .form-items .btn-submit i {
-    margin-left: 10px;
-    font-size: 0.9em;
-  }
-  .form .form-items .note {
-    font-size: 1em;
-    margin-top: 10px;
-  }
-  .form .form-items .inputs .input-text {
-    width: 49%;
-  }
-  .form .form-items .lists {
-    display: flex;
-    flex-direction: column;
-    border: 2px solid #3e556b;
-    border-radius: 5px;
-    font-size: 1.2em;
-    margin-bottom: 10px;
-  }
-  .form .form-items .lists .list-items {
-    display: flex;
-    flex-direction: row;
-    border-bottom: 1px solid #3e556b;
-  }
-  .form .form-items .lists .list-items:last-child {
-    border-bottom: 0;
-  }
-  .form .form-items .lists .list-items .c {
-    width: 85%;
-    padding: 2.5% 3%;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-  }
-  .form .form-items .lists .list-items .btn {
-    width: 15%;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: #3e556b;
-  }
-  .form .form-items .lists .list-items .btn:hover {
-    cursor: pointer;
-    color: #a7c4e0;
-  }
-  .form .toggle-items {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    line-height: 1em;
-    justify-content: space-between;
-    font-size: 1.4em;
-    margin-bottom: 15px;
-  }
-  .form .toggle-items i {
-    font-size: 1.75em;
-    padding: 0;
-    color: #a7c4e0;
-  }
-  .form .toggle-items i.fa-toggle-on {
-    color: #0e2b47;
-    text-shadow: 1px 2px 3px rgba(0, 0, 0, 0.2);
-  }
-  .form .toggle-items i:hover {
-    cursor: pointer;
-  }
-  .device-info {
-    width: 90%;
-    margin: 60px 5%;
-    margin-top: 30px;
-  }
-  .device-info .info {
-    margin-bottom: 40px;
-  }
-  .device-info .info .temperature-current {
-    font-size: 5.4em;
-    line-height: 1.2em;
-  }
-  .device-info .info p {
-    font-size: 1em;
-  }
-  .device-info .temperature-stat {
-    margin-bottom: 40px;
-  }
-  .device-info .temperature-stat .box {
-    width: 31.33%;
-    margin-right: 3%;
-    padding: 0 5%;
-    height: 150px;
-    border-radius: 5px;
-  }
-  .device-info .temperature-stat .box:nth-child(3n+0) {
-    margin-right: 0%;
-  }
-  .device-info .temperature-stat .box h3 {
-    font-size: 2.16em;
-  }
-  .device-info .temperature-stat .box p {
-    font-size: 1em;
-  }
-  .device-info .graph {
-    height: 150px;
-    margin-bottom: 40px;
-  }
-  .device-info .graph canvas {
-    height: 150px;
-  }
-  .device-info h2 {
-    font-size: 1.4em;
-    margin-bottom: 15px;
-  }
-  .device-info .history {
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    border-radius: 5px;
-    background: #3e556b;
-  }
-  .device-info .history .logitems {
-    padding: 15px 5%;
-    font-size: 1.4em;
-  }
-  .device-info .history .logitems .status {
-    width: 10%;
-    font-size: 0.7em;
-  }
-  .device-info .history .logitems .time {
-    width: 55%;
-  }
-  .device-info .history .logitems .icon {
-    width: 5%;
-    font-size: 0.7em;
-  }
-  .device-info .history .logitems .temp {
-    width: 30%;
-  }
-  .device-info .history .loading {
-    padding: 15% 0;
-    font-size: 1.4em;
-  }
-  .device-info .history .empty {
-    padding: 15% 0;
-    font-size: 1.4em;
-  }
-  .footer {
-    width: 90%;
-    margin: 5%;
-    font-size: 1em;
-  }
-  .footer i {
-    margin-right: 5px;
-  }
-  .footer a {
-    padding: 3px 6px;
-    border-radius: 5px;
-  }
-  #progress-bar {
-    height: 5px;
-  }
-  #loading-bar {
-    height: 5px;
-  }
-  .message-box {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .message-box.-minibox {
-    padding: 8% 0%;
-  }
-  .message-box.-minibox .msg {
-    margin-bottom: 4%;
-  }
-  .message-box .icon {
-    font-size: 1.8em;
-    color: #a7c4e0;
-  }
-  .message-box .msg {
-    font-size: 1.8em;
-    color: #eeeeee;
-    margin-bottom: 25px;
-  }
-  .message-box .msg strong {
-    color: #eeeeee;
-  }
-  .message-box .control {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-  .message-box .control p {
-    padding: 14px 0;
-    font-size: 1.4em;
-    color: #a7c4e0;
-  }
-  .message-box .control a.btn {
-    text-decoration: none;
-    background: #0e2b47;
-    color: #FFFFFF;
-    font-size: 1.2em;
-    font-family: initial;
-    padding: 14px 28px;
-    margin: 0 10px;
-    font-weight: bold;
-    border-radius: 5px;
-    display: block;
-  }
-  .message-box .control a.btn i {
-    margin-left: 15px;
-  }
-  .message-box .control a.btn.btn-not-Accept {
-    background: #3e556b;
-    color: #a7c4e0;
-  }
-  #disconnect-bar {
-    bottom: -60px;
-    width: 100%;
-    height: 60px;
-    font-size: 1.4em;
-  }
-  #disconnect-bar i {
-    margin-right: 15px;
-  }
-}
