--- a/app/less/style.less
+++ b/app/less/style.less
@@ -33,7 +33,7 @@
 	}
 
 	.title {
-		color: @text_color_normal;
+		color: @white_color;
 		font-size: @fontsize_topic;
 		margin-left: auto;
 		margin-right: auto;
@@ -93,7 +93,7 @@
 
 			.title {
 				font-size: @fontsize_topic;
-				color: @text_color_normal;
+				color: @primary_color_font;
 				margin-right: auto;
 				white-space: nowrap;
 				overflow: hidden;
@@ -108,8 +108,8 @@
 				font-size: @fontsize_mini;
 				text-decoration: none;
 				padding: (@header_height / 20) (@header_height / 4);
-				border: 2px solid @border_color;
-				color: @border_color;
+				background: @primary_color_secondary;
+				color: @primary_color_font;
 				border-radius: @radius;
 			}
 		}
@@ -129,8 +129,8 @@
 				display: flex;
 				flex-direction: column;
 				justify-content: center;
-				background: @border_color;
-				color: @border_color_hover;
+				background: @primary_color_secondary;
+				color: @primary_color_font;
 				box-sizing: border-box;
 				.transitionAnimation(0.3s);
 
@@ -140,8 +140,8 @@
 
 				&.create-button {
 					background: transparent;
-					border: 2px dashed @border_color_hover;
-					color: @border_color_hover;
+					border: 2px dashed @primary_color_font;
+					color: @primary_color_font;
 					font-size: @fontsize_normal;
 					align-items: center;
 					box-shadow: none;
@@ -224,13 +224,13 @@
 
 		h1 {
 			font-size: @fontsize_topic;
-			color: @text_color_dark;
+			color: @primary_color_font;
 			margin-bottom: 5px;
 		}
 		p {
 			font-size: @fontsize_normal;
 			margin-bottom: 30px;
-			color: @text_color_normal;
+			color: @primary_color_font;
 		}
 
 		a {
@@ -242,7 +242,6 @@
 			margin-top: 15px;
 			border-radius: @radius;
 			background: @green_color;
-			color: @bg_color;
 			font-size: @fontsize_input;
 			font-weight: bold;
 			text-decoration: none;
@@ -278,16 +277,16 @@
 
 		&.logout {
 			font-size: @fontsize_icon;
-			color: @primary_color;
+			color: @white_color;
 		}
 
 		p {
 			font-size: @fontsize_normal;
 			margin-bottom: @input_padding * 2;
-			color: @border_color_hover;
+			color: @primary_color_font;
 
 			a {
-				color: @primary_color_light;
+				color: @white_color;
 				font-weight: bold;
 			}
 		}
@@ -321,7 +320,7 @@
 
 		label {
 			font-size: @fontsize_mini;
-			color: @text_color_normal;
+			color: @primary_color_font;
 			display: flex;
 			flex-direction: row;
 			justify-content: space-between;
@@ -333,12 +332,14 @@
 			}
 
 			.label-button {
-					color: @primary_color;
+					color: @primary_color_font;
 					text-decoration: none;
+					background: @primary_color_secondary;
+					padding: 0px 10px;
+					border-radius: @radius;
 					
 					&:hover {
 							cursor: pointer;
-							text-decoration: underline;
 					}
 			}
 
@@ -354,10 +355,10 @@
 			font-size: @fontsize_input;
 			padding: (@input_padding / 1.2) @input_padding;
 			background: transparent;
-			color: @border_color_hover;
+			color: @primary_color_font;
 			margin: 0%;
 			box-sizing: border-box;
-			border: 2px solid @border_color;
+			border: 2px solid @primary_color_secondary;
 			resize: none;
 			outline: none;
 			border-radius: @radius;
@@ -371,7 +372,7 @@
 			}
 
 			&::placeholder {
-				color: @border_color;
+				color: @primary_color_secondary;
 			}
 
 			&:hover {
@@ -384,7 +385,7 @@
 			}
 
 			&:disabled {
-				background: @border_color;
+				background: @primary_color_secondary;
 				color: @primary_color;
 			}
 		}
@@ -416,23 +417,23 @@
 			
 			&:hover {
 				cursor: pointer;
-				background: @primary_color_dark;
 			}
 			
 			&.loading {
-				background: @border_color;
-				color: @border_color_hover;
+				background: @primary_color_secondary;
+				color: @primary_color_font;
 				box-shadow: none;
 			}
 
 			&.completed {
 				background: @green_color;
+				color: @white_color;
 				box-shadow: none;
 			}
 		}
 
 		.note {
-			color: @text_color_normal;
+			color: @primary_color_font;
 			font-size: @fontsize_mini;
 			margin-top: 10px;
 
@@ -462,7 +463,7 @@
 		.lists {
 			display: flex;
 			flex-direction: column;
-			border: 2px solid @border_color;
+			border: 2px solid @primary_color_secondary;
 			border-radius: @radius;
 			font-size: 1.2em;
 			margin-bottom: 10px;
@@ -470,7 +471,7 @@
 			.list-items {
 				display: flex;
 				flex-direction: row;
-				border-bottom: 1px solid @border_color;
+				border-bottom: 1px solid @primary_color_secondary;
 
 				&:last-child {
 					border-bottom: 0;
@@ -481,6 +482,7 @@
 					text-overflow: ellipsis;
 					white-space: nowrap;
 					overflow: hidden;
+					color: @white_color;
 				}
 
 				.btn {
@@ -489,11 +491,11 @@
 					display: flex;
 					align-items: center;
 					justify-content: center;
-					color: @border_color;
+					color: @primary_color_secondary;
 
 					&:hover {
 						cursor: pointer;
-						color: @border_color_hover;
+						color: @primary_color_font;
 					}
 				}
 			}
@@ -513,7 +515,7 @@
 		i {
 			font-size: @fontsize_normal * 1.25;
 			padding: 0;
-			color: @border_color;
+			color: @primary_color_secondary;
 
 			&.fa-toggle-on {
 				color: @green_color;
@@ -557,7 +559,7 @@
 
 		p {
 			font-size: @fontsize_mini;
-			color: @text_color_light;
+			color: @white_color;
 
 			i {
 				margin-left: 10px;
@@ -585,7 +587,7 @@
 			justify-content: center;
 			border-radius: @radius;
 			box-sizing: border-box;
-			color: @text_color_normal;
+			color: @white_color;
 
 			&:nth-child(3n+0) {
 				margin-right: 0%;
@@ -613,7 +615,7 @@
 	h2 {
 		font-size: @fontsize_normal;
 		margin-bottom: 15px;
-		color: @text_color_light;
+		color: @white_color;
 		font-weight: normal;
 
 		i {
@@ -645,8 +647,8 @@
 			align-items: center;
 			padding: 15px 0;
 			font-size: @fontsize_normal;
-			color: @text_color_normal;
-			border-bottom: 1px dotted @border_color_hover;
+			color: @white_color;
+			border-bottom: 1px dotted @primary_color_font;
 
 			&:last-child {
 				border-bottom: 0;
@@ -693,7 +695,7 @@
 			justify-content: center;
 			font-size: @fontsize_normal;
 			font-style: italic;
-			color: @border_color_hover;
+			color: @primary_color_font;
 		}
 
 		.empty {
@@ -701,7 +703,7 @@
 			padding: 15% 0;
 			display: flex;
 			justify-content: center;
-			color: @border_color_hover;
+			color: @primary_color_font;
 			font-size: @fontsize_normal;
 			font-style: italic;
 		}
@@ -712,7 +714,7 @@
 	width: 60%;
 	margin: 0 20%;
 	margin-bottom: 2%;
-	color: @border_color_hover;
+	color: @primary_color_font;
 	display: flex;
 	font-size: @fontsize_mini;
 	flex-direction: row;
@@ -725,8 +727,8 @@
 	a {
 		padding: 3px 10px;
 		text-decoration: none;
-		background: @border_color;
-		color: @border_color_hover;
+		background: @primary_color_secondary;
+		color: @primary_color_font;
 		border-radius: @radius;
 	}
 }
@@ -790,22 +792,13 @@
 	justify-content: center;
 	align-items: center;
 
-	&.-minibox{
-		padding: 8% 0%;
-		.msg{ margin-bottom: 4%; }
-	}
-
-	.icon {
-		font-size: @fontsize_topic;
-		color: @border_color_hover;
-	}
 	.msg {
 		font-size: @fontsize_topic;
-		color: @text_color_normal;
+		color: @primary_color_font;
 		margin-bottom: 25px;
 
 		strong {
-			color: @text_color_normal;
+			color: @white_color;
 		}
 	}
 	.control {
@@ -816,15 +809,14 @@
 		p {
 			padding: 14px 0;
 			font-size: @fontsize_normal;
-			color: @border_color_hover;
+			color: @primary_color_font;
 		}
 
 		a.btn {
 			text-decoration: none;
-			background: @primary_color;
-			color: @white_color;
+			background: @white_color;
+			color: @primary_color;
 			font-size: @fontsize_input;
-			font-family: initial;
 			padding: 14px 28px;
 			margin: 0 10px;
 			font-weight: bold;
@@ -836,8 +828,8 @@
 			}
 
 			&.btn-not-Accept {
-				background: @border_color;;
-				color: @border_color_hover;
+				background: @primary_color_secondary;;
+				color: @primary_color_font;
 			}
 		}
 	}
